[project]
name = "crane-spotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.2",
    "httpx2>=2.7.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
    "uuid>=1.30",
    "uuid-utils>=0.16.2",
    "uvicorn>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["alembic/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax)
]

[tool.ruff.format]
quote-style = "double"
